@@ -1,3 +1,13 @@
+2008-09-01  Benjamin Berg  <benjamin@sipsolutions.net>
+
+	* engines/clearlooks/src/clearlooks_rc_style.c:
+	* engines/clearlooks/src/clearlooks_rc_style.h:
+	* engines/clearlooks/src/clearlooks_style.c:
+	* engines/clearlooks/src/clearlooks_style.h:
+	* engines/clearlooks/src/clearlooks_theme_main.c:
+	Use the G_DEFINE_DYNAMIC_TYPE macro provided by GLib.
+	Bug #549830 Patch by Christian Dywan.
+
 2008-08-20  Andrea Cimitan  <andrea.cimitan@gmail.com>
 
 	* themes/Clearlooks/gtk-2.0/gtkrc:
